--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,9 @@
-<h1>Home#about</h1>
-<p>Find me in app/views/home/about.html.erb</p>
+<div>
+    <iframe
+    width="600"
+    height="450"
+    frameborder="0" style="border:0"
+    src="https://www.google.com/maps/embed/v1/search?key=AIzaSyC5Xxl_fdvlfDqSgEo3aal5q7AgpFDgm2w
+        &q=デニーズ+新宿" allowfullscreen>
+    </iframe>
+</div>
