--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,7 @@
 <% if @post.favorited_by?(current_user) %>
     <li class="fa">
         <%= link_to post_favorites_path(@post), method: :delete do %>
-            <div class="heart"></div>
+            <div class="red_heart"></div>
         <% end %>
         <div><%= @post.favorites.count %>いいね</div>
         <div><%= @post.post_comments.count %>コメント</div>
